# 2022cpl

./: CMakeLists.txt  LICENSE  README.md
0_intro/: CMakeLists.txt  a+bproblem.c  hello.c
10-struct-11-linkedlist/: CMakeLists.txt  buddy2.c  fifa.c  fifa2.c  file-management.c  polynlist.c  string-hash.c  string-hash2.c
1_intro_io/: CMakeLists.txt  admin.c  admin_scanf.c  ascii.c  change.c  circle.c  equation.c  gravity.c  inverse.c  julian.c  mol.c  pi.c  sphere.c  time.c
2-if-for-array/: CMakeLists.txt  collatz.c  factorial.c  inverse2.c  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c  obstacle.c  series.c  single.c
2021-exam/: CMakeLists.txt  bsearch.c  gobang.c  lineup.c  sorted.c
2022-project-1/: CMakeLists.txt  calculator.c
2022-project-2/: CMakeLists.txt  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
3-for-a-while/: CMakeLists.txt  Josephus.c  Quick-sort.c  binary-search.c  decimal.c  digits.c  flip.c  palindrome.c  palindrome2.c  primes.c  selection-sort.c  stars.c  statistics.c
4-loops/: CMakeLists.txt  game-of-life.c  life.c  matrix-mult.c  mines.c  sudocu.c  trace.c
5-function/: CMakeLists.txt  absolute-prime.c  behaviors.c  leap-f.c  magic-square.c  next-permutation.c  radix.c  sum.c
6-recursion/: CMakeLists.txt  bsearch-re.c  fib-re.c  gcd.c  integration.c  max.c  min-re.c  pascal.c  poi.c  sum-re.c  tiles.c  triangle.c
7-data-types/: CMakeLists.txt  brackets.c  buddy.c  cuboid.c  pour.c  rotate.c  wine.c
8-pointers/: CMakeLists.txt  interpreter.c  substr.c  title.c
9-more-pointers/: CMakeLists.txt  parse.c  stringcat.c  test9.c  tokenizer.c
ramfs/: ramfs.c
