cmake_minimum_required(VERSION 3.23)
project(2022cpl C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(0_intro)
add_subdirectory(1_intro_io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-a-while)
add_subdirectory(4-loops)
add_subdirectory(5-function)
add_subdirectory(6-recursion)
add_subdirectory(7-data-types)
add_subdirectory(8-pointers)
add_subdirectory(9-more-pointers)
add_subdirectory(2022-project-1)
add_subdirectory(10-struct-11-linkedlist)
add_subdirectory(2022-project-2)
add_subdirectory(2021-exam)