

add_executable(stars stars.c)
add_executable(primes primes.c)
add_executable(binary-search binary-search.c)
add_executable(digits digits.c)
add_executable(palindrome palindrome.c)
add_executable(flip flip.c)
add_executable(decimal decimal.c)
add_executable(palindrome2 palindrome2.c)
add_executable(statistics statistics.c)
add_executable(Quick-sort Quick-sort.c)
add_executable(Josephus Josephus.c)
add_executable(selection-sort selection-sort.c)